force-app/main/default/objects/Object_for_Document__c/Object_for_Document__c.object-meta.xml
<CustomObject>
    <label>Object for Document</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Object for Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objects for Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>