force-app/main/default/objects/Object_for_Document__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>