force-app/main/default/objects/Object_for_Document__c/fields/Involved_In_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Involved_In_Claim_Id__c</fullName>
    <label>Involved In Claim Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>