force-app/main/default/objects/Object_for_Document__c/fields/Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Id__c</fullName>
    <label>Policy Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>