force-app/main/default/objects/Object_for_Document__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>objects</relationshipLabel>
    <relationshipName>objects</relationshipName>
    <type>Lookup</type>
</CustomField>